--- a/index.html
+++ b/index.html
@@ -1,46 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- проверь правильность подключения стилей -->
   <link rel="stylesheet" href="/styles/normalize.css">
-  <link rel="stylesheet" href="/styles/styles.css"> 
+  <link rel="stylesheet" href="/styles/styles.css">
   <title>Adviser</title>
 </head>
-<body>
-  <header class="header">
-    <h1 class="header-title">Юридическая фирма "Эдвайзер"</h1>
 
+<body class="page">
+  
+  <header class="header">
+    <h1 class="header__title">Юридическая фирма "Эдвайзер"</h1>
+    <nav class="nav">
+      <a href="#" class="nav__title nav__title_active">главная</a>
+      <a href="#" class="nav__title">о фирме</a>
+      <a href="#" class="nav__title">новости</a>
+      <a href="#" class="nav__title">аналитика</a>
+      <a href="#" class="nav__title">услуги</a>
+      <a href="#" class="nav__title">клиенты</a>
+      <a href="#" class="nav__title">контакты</a>
+    </nav>
   </header>
 
-  <nav class="nav"></nav>
-    <content class="content">
+
+
+  <content class="content">
     <ul class="cards">
       <li class="card">
-        <div class="card-title"></div>
-        <div class="card-text"></div>
+        <div class="card__title"></div>
+        <div class="card__text"></div>
       </li>
       <li class="card">
-        <div class="card-title"></div>
-        <div class="card-text"></div>
+        <div class="card__title"></div>
+        <div class="card__text"></div>
       </li>
       <li class="card">
-        <div class="card-title"></div>
-        <div class="card-text"></div>
+        <div class="card__title"></div>
+        <div class="card__text"></div>
       </li>
       <li class="card">
-        <div class="card-title"></div>
-        <div class="card-text"></div>
+        <div class="card__title"></div>
+        <div class="card__text"></div>
       </li>
       <li class="card">
-        <div class="card-title"></div>
-        <div class="card-text"></div>
+        <div class="card__title"></div>
+        <div class="card__text"></div>
       </li>
     </ul>
   </content>
   <footer class="footer"></footer>
 
 </body>
+
 </html>
