Сделал границы карточек

--- a/index.html
+++ b/index.html
@@ -26,10 +26,12 @@
     </nav>
   </header>
 
-
-
-  <content class="content">
-    <ul class="cards">
+  <main class="content">
+      <ul class="cards">
+      <li class="card">
+        <div class="card__title">проверка</div>
+        <div class="card__text"></div>
+      </li>
       <li class="card">
         <div class="card__title"></div>
         <div class="card__text"></div>
@@ -51,7 +53,7 @@
         <div class="card__text"></div>
       </li>
     </ul>
-  </content>
+  </main>
   <footer class="footer"></footer>
 
 </body>
