--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- проверь правильность подключения стилей -->
-  <link rel="stylesheet" href="/styles/normalize.css">
-  <link rel="stylesheet" href="/styles/styles.css">
+  <link rel="stylesheet" href="./styles/normalize.css">
+  <link rel="stylesheet" href="./styles/styles.css">
   <title>Adviser</title>
 </head>
 
 <body class="page">
-  
+
   <header class="header">
     <h1 class="header__title">Юридическая фирма "Эдвайзер"</h1>
     <nav class="nav">
@@ -26,31 +26,46 @@
     </nav>
   </header>
 
+  <!-- ОСНОВНОЕ -->
   <main class="content">
-      <ul class="cards">
-      <li class="card">
-        <div class="card__title">проверка</div>
-        <div class="card__text"></div>
+    <ul class="cards">
+      <li class="card card_theme_dark-grey">
+        <h2 class="card__title">КОМПЕТЕНЦИЯ</h2>
+        <p class="card__text">Правовая поддержка предпринимательской деятельности.</p>
+        <p class="card__text">Представление интересов в судах.</p>
+      </li>
+      <li class="card card_theme_light-blue">
+        <h2 class="card__title">КОНТАКТЫ</h2>
+        <p class="card__text">Тел.:  +7 (921) 942 36 97<br>
+          Моб.: +7 (952) 206 67 78<br>
+          EMAIL: adviser@bk.ru
+        </p>
+        <p class="card__text">Санкт-Петербург, Россия<br>
+          195027, ул. Магнитогорская, 3-2-1</p>
       </li>
       <li class="card">
         <div class="card__title"></div>
         <div class="card__text"></div>
       </li>
-      <li class="card">
-        <div class="card__title"></div>
-        <div class="card__text"></div>
+      <li class="card card_theme_grey">
+        <h2 class="card__title card_theme_grey">Фирма</h2>
+        <p class="card__text card_theme_grey">Фирма образована в 1999 году в составе немецкого холдинга SP AG.
+          По 2011 год обслуживала один из крупнейших проектов Санкт-Петербурга в области коммерческой недвижимости – строительство Торгового центра STOCKMANN на Невском пр. 114.
+        </p>
+        <a href="#" class="card__link">читать далее</a>
       </li>
-      <li class="card">
-        <div class="card__title"></div>
-        <div class="card__text"></div>
+      <li class="card card_theme_white">
+        <h2 class="card__title card_theme_white">Аналитика</h2>
+        <p class="card__text card__text_theme_white">Статья: "Новое в правовом положении проживающих за рубежом бипатридов (лиц с двойным гражданством) и российских граждан с ВНЖ"</p>
+        <a href="#" class="card__link">читать далее</a>
       </li>
-      <li class="card">
-        <div class="card__title"></div>
-        <div class="card__text"></div>
-      </li>
-      <li class="card">
-        <div class="card__title"></div>
-        <div class="card__text"></div>
+      <li class="card card_theme_grey">
+        <h2 class="card__title card_theme_grey">Новости</h2>
+        <p class="card__text card_theme_grey">Правовая поддержка Федерального конкурса "Наш Любимый Врач". 
+          <br><br><br>Крупные арбитражные дела
+        </p>
+
+        <a href="#" class="card__link">читать далее</a>
       </li>
     </ul>
   </main>
