Сверстал всю страницу

--- a/index.html
+++ b/index.html
@@ -64,12 +64,15 @@
         <p class="card__text card_theme_grey">Правовая поддержка Федерального конкурса "Наш Любимый Врач". 
           <br><br><br>Крупные арбитражные дела
         </p>
-
         <a href="#" class="card__link">читать далее</a>
       </li>
     </ul>
   </main>
-  <footer class="footer"></footer>
+  
+  <!-- ПОДВАЛ -->
+  <footer class="footer">
+    <p class="card__text card_theme_grey">​​© 2023  Юридическая фирма «Эдвайзер»</p>
+  </footer>
 
 </body>
 
