Добавил трансформации на ссылки

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- проверь правильность подключения стилей -->
   <link rel="stylesheet" href="./styles/normalize.css">
   <link rel="stylesheet" href="./styles/styles.css">
   <title>Adviser</title>
@@ -36,7 +35,7 @@
       </li>
       <li class="card card_theme_light-blue">
         <h2 class="card__title">КОНТАКТЫ</h2>
-        <p class="card__text">Тел.:  +7 (921) 942 36 97<br>
+        <p class="card__text">Тел.: +7 (921) 942 36 97<br>
           Моб.: +7 (952) 206 67 78<br>
           EMAIL: adviser@bk.ru
         </p>
@@ -50,28 +49,36 @@
       <li class="card card_theme_grey">
         <h2 class="card__title card_theme_grey">Фирма</h2>
         <p class="card__text card_theme_grey">Фирма образована в 1999 году в составе немецкого холдинга SP AG.
-          По 2011 год обслуживала один из крупнейших проектов Санкт-Петербурга в области коммерческой недвижимости – строительство Торгового центра STOCKMANN на Невском пр. 114.
+          По 2011 год обслуживала один из крупнейших проектов Санкт-Петербурга в области коммерческой недвижимости –
+          строительство Торгового центра STOCKMANN на Невском пр. 114.
         </p>
-        <a href="#" class="card__link">читать далее</a>
+        <div class="card__links">
+          <a href="#" class="card__link">читать далее</a>
+        </div>
       </li>
       <li class="card card_theme_white">
         <h2 class="card__title card_theme_white">Аналитика</h2>
-        <p class="card__text card__text_theme_white">Статья: "Новое в правовом положении проживающих за рубежом бипатридов (лиц с двойным гражданством) и российских граждан с ВНЖ"</p>
-        <a href="#" class="card__link">читать далее</a>
+        <p class="card__text card__text_theme_white">Статья: "Новое в правовом положении проживающих за рубежом
+          бипатридов (лиц с двойным гражданством) и российских граждан с ВНЖ"</p>
+        <div class="card__links">
+          <a href="#" class="card__link">читать далее</a>
+        </div>
       </li>
       <li class="card card_theme_grey">
         <h2 class="card__title card_theme_grey">Новости</h2>
-        <p class="card__text card_theme_grey">Правовая поддержка Федерального конкурса "Наш Любимый Врач". 
+        <p class="card__text card_theme_grey">Правовая поддержка Федерального конкурса "Наш Любимый Врач".
           <br><br><br>Крупные арбитражные дела
         </p>
-        <a href="#" class="card__link">читать далее</a>
+        <div class="card__links">
+          <a href="#" class="card__link">читать далее</a>
+        </div>
       </li>
     </ul>
   </main>
-  
+
   <!-- ПОДВАЛ -->
   <footer class="footer">
-    <p class="card__text card_theme_grey">​​© 2023  Юридическая фирма «Эдвайзер»</p>
+    <p class="card__text card_theme_grey">​​© 2023 Юридическая фирма «Эдвайзер»</p>
   </footer>
 
 </body>
