Пытаюсь делать About

--- a/about.html
+++ b/about.html
@@ -28,43 +28,45 @@
   <!-- ОСНОВНОЕ -->
   <main>
     <section class="content">
-      <h2 class="subtitle subtitle__text">О ФИРМЕ</h2>
-
-
-      <!-- TO DO  -->
-
-      <ul class="cards">
-        <li class="card card_theme_grey">
-          <h2 class="card__title card_theme_grey">Фирма</h2>
-          <p class="card__text card_theme_grey">Фирма образована в 1999 году в составе немецкого холдинга SP AG.
-            По 2011 год обслуживала один из крупнейших проектов Санкт-Петербурга в области коммерческой недвижимости –
-            строительство Торгового центра STOCKMANN на Невском пр. 114.
-          </p>
-          <div class="card__links">
-            <a href="#" class="card__link">читать далее</a>
-          </div>
-        </li>
-        <li class="card card_theme_grey">
-          <h2 class="card__title card_theme_grey">Фирма</h2>
-          <p class="card__text card_theme_grey">Фирма образована в 1999 году в составе немецкого холдинга SP AG.
-            По 2011 год обслуживала один из крупнейших проектов Санкт-Петербурга в области коммерческой недвижимости –
-            строительство Торгового центра STOCKMANN на Невском пр. 114.
-          </p>
-          <div class="card__links">
-            <a href="#" class="card__link">читать далее</a>
-          </div>
-        </li>
-        <li class="card card_theme_grey">
-          <h2 class="card__title card_theme_grey">Фирма</h2>
-          <p class="card__text card_theme_grey">Фирма образована в 1999 году в составе немецкого холдинга SP AG.
-            По 2011 год обслуживала один из крупнейших проектов Санкт-Петербурга в области коммерческой недвижимости –
-            строительство Торгового центра STOCKMANN на Невском пр. 114.
-          </p>
-          <div class="card__links">
-            <a href="#" class="card__link">читать далее</a>
-          </div>
-        </li>
-      </ul>
+      
+      <!-- TODO -->
+      <div class="firm-description">
+        <ul class="cards">
+          <li class="card card_theme_dark-grey card_type_header">
+            <h2 class="card__title">О ФИРМЕ</h2>
+          </li>
+          <li class="card card_type_header">
+            <h2 class="card__title"></h2>
+          </li>
+          <li class="card card_type_header">
+            <h2 class="card__title"></h2>
+          </li>
+          <li class="card card_theme_grey card_type_description">
+            <p class="card__text_type_description card_theme_grey">Фирма образована в 1999 году в составе немецкого
+              холдинга SP AG.
+              По 2011 год обслуживала один из крупнейших проектов Санкт-Петербурга в области коммерческой недвижимости –
+              строительство Торгового центра STOCKMANN на Невском пр. 114 (расселение домов, выкуп помещений, продажа
+              проекта концерну STOCKMANN, сопровождение проектирования и строительства объекта).
+            </p>
+          </li>
+          <li class="card card_theme_grey card_type_description">
+            <p class="card__text_type_description card_theme_grey">Клиентами фирмы являются и иные строительные
+              организации, а также коммерческие структуры другого профиля: финский концерн SRV,Бизнес-Центр
+              "Информ-Футуре", Borenius & Kemppinen Ltd, Hedman Partners, POYRY OY, ASTERA, East Market Motors (дилер
+              Hyundai), Optosense (производство оптических приборов), ООО «РБ Транс» (железнодорожные перевозки), ООО
+              «ПромДетальМаш» (ремонт и техническое обслуживание крупной машиностроительной техники) и др.
+            </p>
+          </li>
+          <li class="card card_theme_grey card_type_description">
+            <p class="card__text_type_description card_theme_grey">С 2015 года фирма также защищает интеллектуальную
+              собственность клиентов и поддерживает IT проекты и стартапы.
+              С 2017 года юристы фирмы активно ведут проекты в области ЖКХ (поддержка деятельности управляющих компаний,
+              ТСЖ и подобное).
+              Фирма имеет партнерские структуры в Хельсинки (Финляндия) и Москве.
+            </p>
+          </li>
+        </ul>
+      </div>
     </section>
   </main>
 
