--- a/about.html
+++ b/about.html
@@ -26,11 +26,37 @@
   </header>
 
   <!-- ОСНОВНОЕ -->
-  <main>
-    <section class="content">
-      
-      <!-- TODO -->
-      <div class="firm-description">
+  <main class="content">
+    <section class="block">
+
+      <h2 class="block__title block__title_about-firm">О ФИРМЕ</h2>
+      <article class="block__text">
+        <p> Фирма образована в 1999 году в составе немецкого
+          холдинга SP AG.
+        </p>
+        <p>
+          По 2011 год обслуживала один из крупнейших проектов Санкт-Петербурга в области коммерческой недвижимости –
+          строительство Торгового центра STOCKMANN на Невском пр. 114 (расселение домов, выкуп помещений, продажа
+          проекта концерну STOCKMANN, сопровождение проектирования и строительства объекта).
+        </p>
+        <p>
+          Клиентами фирмы являются и иные строительные
+          организации, а также коммерческие структуры другого профиля: финский концерн SRV,Бизнес-Центр
+          "Информ-Футуре", Borenius & Kemppinen Ltd, Hedman Partners, POYRY OY, ASTERA, East Market Motors (дилер
+          Hyundai), Optosense (производство оптических приборов), ООО «РБ Транс» (железнодорожные перевозки), ООО
+          «ПромДетальМаш» (ремонт и техническое обслуживание крупной машиностроительной техники) и др.
+        </p>
+        <p>
+          С 2015 года фирма также защищает интеллектуальную
+          собственность клиентов и поддерживает IT проекты и стартапы.
+          С 2017 года юристы фирмы активно ведут проекты в области ЖКХ (поддержка деятельности управляющих компаний,
+          ТСЖ и подобное).
+          Фирма имеет партнерские структуры в Хельсинки (Финляндия) и Москве.
+        </p>
+      </article>
+    </section>
+  </main>
+  <!-- <div class="firm-description">
         <ul class="cards">
           <li class="card card_theme_dark-grey card_type_header">
             <h2 class="card__title">О ФИРМЕ</h2>
@@ -66,9 +92,8 @@
             </p>
           </li>
         </ul>
-      </div>
-    </section>
-  </main>
+      </div> -->
+
 
   <!-- ПОДВАЛ -->
   <footer class="footer">
