Сверстал блок Григораш

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h1 class="header__title">Юридическая фирма "Эдвайзер"</h1>
     <nav class="nav">
       <a href="#" class="nav__title nav__title_active">главная</a>
-      <a href="#" class="nav__title">о фирме</a>
+      <a href="./about.html" class="nav__title">о фирме</a>
       <a href="#" class="nav__title">новости</a>
       <a href="#" class="nav__title">аналитика</a>
       <a href="#" class="nav__title">услуги</a>
