--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
   <header class="header">
     <h1 class="header__title">Юридическая фирма "Эдвайзер"</h1>
     <nav class="nav">
-      <a href="#" class="nav__title">главная</a>
+      <a href="./index.html" class="nav__title">главная</a>
       <a href="#" class="nav__title  nav__title_active">о фирме</a>
       <a href="#" class="nav__title">новости</a>
       <a href="#" class="nav__title">аналитика</a>
@@ -26,9 +26,8 @@
   </header>
 
   <!-- ОСНОВНОЕ -->
-  <main class="content">
+  <main class="content content__about-firm">
     <section class="block">
-
       <h2 class="block__title block__title_about-firm">О ФИРМЕ</h2>
       <article class="block__text">
         <p> Фирма образована в 1999 году в составе немецкого
@@ -55,44 +54,46 @@
         </p>
       </article>
     </section>
+
+    <!-- ГРИГОРАШ -->
+    <section class="block">
+      <h2 class="block__title">Управляющий партнер</h2>
+      <div class="block__description">
+        <div class="block__photo-place">
+          <img class="block__photo" src="./images/Grigorash-portrait.jpg" alt="Портрет Григораш">
+        </div>
+        <article class="block__text">
+          <h2>Григораш Сергей</h2>
+          <p>Управляющий партнер, Генеральный директор фирмы.</p>
+          <p>Практикующий юрист с 1999 года. Выпускник юридического и экономического факультетов Санкт-Петербургского
+            государственного университета.</p>
+          <p>Сергей обладает большим опытом консультирования организаций, реализующих проекты в России, юридического
+            сопровождения крупных сделок, проведения due diligence российских предприятий.</p>
+          <ul><span class="block__list_header">Вот лишь некоторые проекты, правовую поддержку которым оказывал Сергей:</span>
+            <li class="block__list">Полное юридическое сопровождение деятельности проекта строительства Торгового комплекса «СТОКМАНН
+              НЕВСКИЙ ЦЕНТР / STOCKMANN NEVSKY CENTRE» (Санкт-Петербург, Невский пр., 114).</li>
+            <li class="block__list">Полное юридическое обеспечение деятельности в России российско-германского холдинга «SPAG ST. PETERSBURG
+              IMMOBILIEN UND BETEILIGUNGS AKTIENGESELLSСHAFT».</li>
+            <li class="block__list">Регулирование арендных вопросов строящегося ТРЦ «Охта Молл».</li>
+            <li class="block__list">Проведение реорганизации сельскохозяйственного предприятия ОАО "АГРО-ЭНЕРГО".</li>
+            <li class="block__list">Юридическое сопровождение реорганизации Общественной организации «Приозерское районное общество
+              охотников и рыболовов»</li>
+            <li class="block__list">Решение юридических вопросов девелоперской компании «ПЕТЕРБУРГСКИЙ УПРАВЛЯЮЩИЙ» и её клиентов.</li>
+            <li class="block__list">Юридическое сопровождение продажи Бизнес-Центра «Информ-Футуре» иностранному инвестору как бизнеса.</li>
+            <li class="block__list">Юридическое сопровождение проекта выкупа земельного участка ЗАО «Мягкая мебель» (Смольный пр., д. 17.) и
+              реализации на этом месте проекта «Смольнинская Перспектива» (в настоящее время проект «Элитный жилой
+              комплекс Смольный проспект. Проект Р. Бофилла» реализует АО «ЮИТ Санкт-Петербург»).</li>
+          </ul>
+          <p>Сергей Григораш выступал на профессиональных конференциях и деловых мероприятиях по приглашению
+            консалтинговых и образовательных организаций. Он является автором ряда статей, опубликованных в
+            специализированных российских изданиях. Имеет большой опыт работы в интернациональной команде с иностранными
+            коллегами/руководителями/партнерами.</p>
+          <p>Сергей владеет деловым английским языком.</p>
+        </article>
+      </div>
+    </section>
   </main>
-  <!-- <div class="firm-description">
-        <ul class="cards">
-          <li class="card card_theme_dark-grey card_type_header">
-            <h2 class="card__title">О ФИРМЕ</h2>
-          </li>
-          <li class="card card_type_header">
-            <h2 class="card__title"></h2>
-          </li>
-          <li class="card card_type_header">
-            <h2 class="card__title"></h2>
-          </li>
-          <li class="card card_theme_grey card_type_description">
-            <p class="card__text_type_description card_theme_grey">Фирма образована в 1999 году в составе немецкого
-              холдинга SP AG.
-              По 2011 год обслуживала один из крупнейших проектов Санкт-Петербурга в области коммерческой недвижимости –
-              строительство Торгового центра STOCKMANN на Невском пр. 114 (расселение домов, выкуп помещений, продажа
-              проекта концерну STOCKMANN, сопровождение проектирования и строительства объекта).
-            </p>
-          </li>
-          <li class="card card_theme_grey card_type_description">
-            <p class="card__text_type_description card_theme_grey">Клиентами фирмы являются и иные строительные
-              организации, а также коммерческие структуры другого профиля: финский концерн SRV,Бизнес-Центр
-              "Информ-Футуре", Borenius & Kemppinen Ltd, Hedman Partners, POYRY OY, ASTERA, East Market Motors (дилер
-              Hyundai), Optosense (производство оптических приборов), ООО «РБ Транс» (железнодорожные перевозки), ООО
-              «ПромДетальМаш» (ремонт и техническое обслуживание крупной машиностроительной техники) и др.
-            </p>
-          </li>
-          <li class="card card_theme_grey card_type_description">
-            <p class="card__text_type_description card_theme_grey">С 2015 года фирма также защищает интеллектуальную
-              собственность клиентов и поддерживает IT проекты и стартапы.
-              С 2017 года юристы фирмы активно ведут проекты в области ЖКХ (поддержка деятельности управляющих компаний,
-              ТСЖ и подобное).
-              Фирма имеет партнерские структуры в Хельсинки (Финляндия) и Москве.
-            </p>
-          </li>
-        </ul>
-      </div> -->
+
 
 
   <!-- ПОДВАЛ -->
