Сверстал About.html

--- a/about.html
+++ b/about.html
@@ -63,24 +63,31 @@
           <img class="block__photo" src="./images/Grigorash-portrait.jpg" alt="Портрет Григораш">
         </div>
         <article class="block__text">
-          <h2>Григораш Сергей</h2>
+          <h2>Сергей Григораш</h2>
           <p>Управляющий партнер, Генеральный директор фирмы.</p>
           <p>Практикующий юрист с 1999 года. Выпускник юридического и экономического факультетов Санкт-Петербургского
             государственного университета.</p>
           <p>Сергей обладает большим опытом консультирования организаций, реализующих проекты в России, юридического
             сопровождения крупных сделок, проведения due diligence российских предприятий.</p>
-          <ul><span class="block__list_header">Вот лишь некоторые проекты, правовую поддержку которым оказывал Сергей:</span>
-            <li class="block__list">Полное юридическое сопровождение деятельности проекта строительства Торгового комплекса «СТОКМАНН
+          <ul><span class="block__list_header">Вот лишь некоторые проекты, правовую поддержку которым оказывал
+              Сергей:</span>
+            <li class="block__list">Полное юридическое сопровождение деятельности проекта строительства Торгового
+              комплекса «СТОКМАНН
               НЕВСКИЙ ЦЕНТР / STOCKMANN NEVSKY CENTRE» (Санкт-Петербург, Невский пр., 114).</li>
-            <li class="block__list">Полное юридическое обеспечение деятельности в России российско-германского холдинга «SPAG ST. PETERSBURG
+            <li class="block__list">Полное юридическое обеспечение деятельности в России российско-германского холдинга
+              «SPAG ST. PETERSBURG
               IMMOBILIEN UND BETEILIGUNGS AKTIENGESELLSСHAFT».</li>
             <li class="block__list">Регулирование арендных вопросов строящегося ТРЦ «Охта Молл».</li>
             <li class="block__list">Проведение реорганизации сельскохозяйственного предприятия ОАО "АГРО-ЭНЕРГО".</li>
-            <li class="block__list">Юридическое сопровождение реорганизации Общественной организации «Приозерское районное общество
+            <li class="block__list">Юридическое сопровождение реорганизации Общественной организации «Приозерское
+              районное общество
               охотников и рыболовов»</li>
-            <li class="block__list">Решение юридических вопросов девелоперской компании «ПЕТЕРБУРГСКИЙ УПРАВЛЯЮЩИЙ» и её клиентов.</li>
-            <li class="block__list">Юридическое сопровождение продажи Бизнес-Центра «Информ-Футуре» иностранному инвестору как бизнеса.</li>
-            <li class="block__list">Юридическое сопровождение проекта выкупа земельного участка ЗАО «Мягкая мебель» (Смольный пр., д. 17.) и
+            <li class="block__list">Решение юридических вопросов девелоперской компании «ПЕТЕРБУРГСКИЙ УПРАВЛЯЮЩИЙ» и её
+              клиентов.</li>
+            <li class="block__list">Юридическое сопровождение продажи Бизнес-Центра «Информ-Футуре» иностранному
+              инвестору как бизнеса.</li>
+            <li class="block__list">Юридическое сопровождение проекта выкупа земельного участка ЗАО «Мягкая мебель»
+              (Смольный пр., д. 17.) и
               реализации на этом месте проекта «Смольнинская Перспектива» (в настоящее время проект «Элитный жилой
               комплекс Смольный проспект. Проект Р. Бофилла» реализует АО «ЮИТ Санкт-Петербург»).</li>
           </ul>
@@ -92,6 +99,33 @@
         </article>
       </div>
     </section>
+
+    <!-- КУЗНЕЦОВ -->
+    <section class="block">
+      <h2 class="block__title">Советник в Европейском Союзе</h2>
+      <div class="block__description">
+        <div class="block__photo-place">
+          <img class="block__photo" src="./images/Kuznetsov-portrait.png" alt="Портрет Кузнецов">
+        </div>
+        <article class="block__text">
+          <h2>Андрей Кузнецов</h2>
+          <p>Андрей закончил юридический факультет МГУ (Москва) в 1991 г.</p>
+          <p>C 1999 года работал в различных юридических и адвокатских фирмах в Финляндии</p>
+          <ul><span class="block__list_header">Советник специализируется в
+              следующих областях:</span>
+            <li class="block__list">договорное право,</li>
+            <li class="block__list">корпоративное и торговое право,</li>
+            <li class="block__list">право информационных технологий,</li>
+            <li class="block__list">законодательство о конкуренции,</li>
+            <li class="block__list">законодательство Европейского Союза,</li>
+            <li class="block__list">трудовое право,</li>
+            <li class="block__list">юридическое сопровождение деятельности предприятий в целом.</li>
+          </ul>
+          <p>Андрей имеет также опыт преподавания в Финляндии и свободно владеет английским и финским языками.</p>
+        </article>
+      </div>
+    </section>
+
   </main>
 
 
