--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
   <header class="header">
     <h1 class="header__title">Юридическая фирма "Эдвайзер"</h1>
     <nav class="nav">
-      <a href="#" class="nav__title nav__title_active">главная</a>
+      <a href="./index.html" class="nav__title nav__title_active">главная</a>
       <a href="./about.html" class="nav__title">о фирме</a>
       <a href="#" class="nav__title">новости</a>
       <a href="#" class="nav__title">аналитика</a>
-      <a href="#" class="nav__title">услуги</a>
+      <a href="./service.html" class="nav__title">услуги</a>
       <a href="#" class="nav__title">клиенты</a>
       <a href="#" class="nav__title">контакты</a>
     </nav>
