--- a/about.html
+++ b/about.html
@@ -16,10 +16,10 @@
     <h1 class="header__title">Юридическая фирма "Эдвайзер"</h1>
     <nav class="nav">
       <a href="./index.html" class="nav__title">главная</a>
-      <a href="#" class="nav__title  nav__title_active">о фирме</a>
+      <a href="./about.html" class="nav__title  nav__title_active">о фирме</a>
       <a href="#" class="nav__title">новости</a>
       <a href="#" class="nav__title">аналитика</a>
-      <a href="#" class="nav__title">услуги</a>
+      <a href="./service.html" class="nav__title">услуги</a>
       <a href="#" class="nav__title">клиенты</a>
       <a href="#" class="nav__title">контакты</a>
     </nav>
@@ -127,9 +127,6 @@
     </section>
 
   </main>
-
-<!-- ARSEN'S CHECK 4 -->
-<!-- Арсен чек 5 -->
 
   <!-- ПОДВАЛ -->
   <footer class="footer">
