--- a/service.html
+++ b/service.html
@@ -21,7 +21,7 @@
       <a href="#" class="nav__title">аналитика</a>
       <a href="./service.html" class="nav__title nav__title_active">услуги</a>
       <a href="#" class="nav__title">клиенты</a>
-      <a href="#" class="nav__title">контакты</a>
+      <a href="./contacts.html" class="nav__title">контакты</a>
     </nav>
   </header>
 
