--- a/contacts.html
+++ b/contacts.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./styles/normalize.css">
   <link rel="stylesheet" href="./styles/styles.css">
-  <title>Contacts</title>
+  <title>КОНТАКТЫ ФИРМЫ</title>
 </head>
 
 <body class="page">
@@ -20,7 +20,7 @@
       <a href="#" class="nav__title">новости</a>
       <a href="#" class="nav__title">аналитика</a>
       <a href="./service.html" class="nav__title">услуги</a>
-      <a href="#" class="nav__title">клиенты</a>
+      <a href="./clients.html" class="nav__title">клиенты</a>
       <a href="./contacts.html" class="nav__title nav__title_active">контакты</a>
     </nav>
   </header>
