--- a/clients.html
+++ b/clients.html
@@ -31,7 +31,7 @@
       <h2 class="block__title block__title_about-firm">КЛИЕНТЫ</h2>
       <ul class="clients">
         <li class="client">
-          <img src="./images/срв.jpg" alt="СРВ" class="client__logo">
+          <img src="./images/SRV new.png" alt="СРВ" class="client__logo">
           <h3 class="client__name">SRV</h3>
         </li>
         <li class="client">
@@ -49,6 +49,50 @@
         <li class="client">
           <img src="./images/форвард.png" alt="форвард" class="client__logo">
           <h3 class="client__name">Форвард</h3>
+        </li>
+        <li class="client">
+          <img src="./images/Аэролайт серый.png" alt="Аэролайт" class="client__logo">
+          <h3 class="client__name">Аэролайт</h3>
+        </li>
+        <li class="client">
+          <img src="./images/AVI MEDIA.png" alt="АВИ МЕДИА" class="client__logo">
+          <h3 class="client__name">AVI MEDIA</h3>
+        </li>
+        <li class="client">
+          <img src="./images/ЭМИ серый.png" alt="ЭМИ" class="client__logo">
+          <h3 class="client__name">ЭМИ</h3>
+        </li>
+        <li class="client">
+          <img src="./images/АрХитЭко.png" alt="Архитэко" class="client__logo">
+          <h3 class="client__name">АрхитЭко</h3>
+        </li>
+        <li class="client">
+          <img src="./images/ВСП серый.png" alt="ВСП" class="client__logo">
+          <h3 class="client__name">ВСП</h3>
+        </li>
+        <li class="client">
+          <img src="./images/Ист Маркет Моторс.png" alt="ИММ" class="client__logo">
+          <h3 class="client__name">Ист Маркет Моторс</h3>
+        </li>
+        <li class="client">
+          <img src="./images/Оптосенс серый.png" alt="Оптосенс" class="client__logo">
+          <h3 class="client__name">Оптосенс</h3>
+        </li>
+        <li class="client">
+          <img src="./images/ПДМ.png" alt="ПДМ" class="client__logo">
+          <h3 class="client__name">ПРОМДЕТАЛЬМАШ</h3>
+        </li>
+        <li class="client">
+          <img src="./images/РБ Транс серый.png" alt="РБ Транс" class="client__logo">
+          <h3 class="client__name">РБ Транс</h3>
+        </li>
+        <li class="client">
+          <img src="./images/Топ Флор.png" alt="Топ Флор" class="client__logo">
+          <h3 class="client__name">Топ Флор</h3>
+        </li>
+        <li class="client">
+          <img src="./images/Траствет.png" alt="Траствет" class="client__logo">
+          <h3 class="client__name">ТрастВет</h3>
         </li>
       </ul>
     </section>
