Сверстал блок News

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <nav class="nav">
       <a href="./index.html" class="nav__title nav__title_active">главная</a>
       <a href="./about.html" class="nav__title">о фирме</a>
-      <a href="#" class="nav__title">новости</a>
+      <a href="./news.html" class="nav__title">новости</a>
       <a href="#" class="nav__title">аналитика</a>
       <a href="./service.html" class="nav__title">услуги</a>
       <a href="./clients.html" class="nav__title">клиенты</a>
@@ -53,7 +53,7 @@
           строительство Торгового центра STOCKMANN на Невском пр. 114.
         </p>
         <div class="card__links">
-          <a href="#" class="card__link">читать далее</a>
+          <a href="./about.html" class="card__link">читать далее</a>
         </div>
       </li>
       <li class="card card_theme_white">
@@ -66,11 +66,11 @@
       </li>
       <li class="card card_theme_grey">
         <h2 class="card__title card_theme_grey">Новости</h2>
-        <p class="card__text card_theme_grey">Правовая поддержка Федерального конкурса "Наш Любимый Врач".
-          <br><br><br>Крупные арбитражные дела
+        <p class="card__text card_theme_grey">Сопровождение девелоперского greenfield проекта в Промышленном парке "Софийский".
+          <br><br><br>Выход на IT-рынок Узбекистана.
         </p>
         <div class="card__links">
-          <a href="#" class="card__link">читать далее</a>
+          <a href="./news.html" class="card__link">читать далее</a>
         </div>
       </li>
     </ul>
