--- a/clients.html
+++ b/clients.html
@@ -47,11 +47,11 @@
           <h3 class="client__name">Rete</h3>
         </li>
         <li class="client">
-          <img src="./images/форвард.png" alt="форвард" class="client__logo">
+          <img src="./images/Forward.png" alt="форвард" class="client__logo">
           <h3 class="client__name">Форвард</h3>
         </li>
         <li class="client">
-          <img src="./images/Аэролайт серый.png" alt="Аэролайт" class="client__logo">
+          <img src="./images/Aerolight.png" alt="Аэролайт" class="client__logo">
           <h3 class="client__name">Аэролайт</h3>
         </li>
         <li class="client">
@@ -59,39 +59,39 @@
           <h3 class="client__name">AVI MEDIA</h3>
         </li>
         <li class="client">
-          <img src="./images/ЭМИ серый.png" alt="ЭМИ" class="client__logo">
+          <img src="./images/IGM.png" alt="ЭМИ" class="client__logo">
           <h3 class="client__name">ЭМИ</h3>
         </li>
         <li class="client">
-          <img src="./images/АрХитЭко.png" alt="Архитэко" class="client__logo">
+          <img src="./images/Architeco.png" alt="Архитэко" class="client__logo">
           <h3 class="client__name">АрхитЭко</h3>
         </li>
         <li class="client">
-          <img src="./images/ВСП серый.png" alt="ВСП" class="client__logo">
+          <img src="./images/VSP.png" alt="ВСП" class="client__logo">
           <h3 class="client__name">ВСП</h3>
         </li>
         <li class="client">
-          <img src="./images/Ист Маркет Моторс.png" alt="ИММ" class="client__logo">
+          <img src="./images/IMM.png" alt="ИММ" class="client__logo">
           <h3 class="client__name">Ист Маркет Моторс</h3>
         </li>
         <li class="client">
-          <img src="./images/Оптосенс серый.png" alt="Оптосенс" class="client__logo">
+          <img src="./images/Opto.png" alt="Оптосенс" class="client__logo">
           <h3 class="client__name">Оптосенс</h3>
         </li>
         <li class="client">
-          <img src="./images/ПДМ.png" alt="ПДМ" class="client__logo">
+          <img src="./images/PDM.png" alt="ПДМ" class="client__logo">
           <h3 class="client__name">ПРОМДЕТАЛЬМАШ</h3>
         </li>
         <li class="client">
-          <img src="./images/РБ Транс серый.png" alt="РБ Транс" class="client__logo">
+          <img src="./images/RB.png" alt="РБ Транс" class="client__logo">
           <h3 class="client__name">РБ Транс</h3>
         </li>
         <li class="client">
-          <img src="./images/Топ Флор.png" alt="Топ Флор" class="client__logo">
+          <img src="./images/TopFloor.png" alt="Топ Флор" class="client__logo">
           <h3 class="client__name">Топ Флор</h3>
         </li>
         <li class="client">
-          <img src="./images/Траствет.png" alt="Траствет" class="client__logo">
+          <img src="./images/Trastvet.png" alt="Траствет" class="client__logo">
           <h3 class="client__name">ТрастВет</h3>
         </li>
       </ul>
