fix: финальные изменения

--- a/news.html
+++ b/news.html
@@ -16,8 +16,8 @@
     <h1 class="header__title">Юридическая фирма "Эдвайзер"</h1>
     <nav class="nav">
       <a href="./index.html" class="nav__title">главная</a>
-      <a href="./about.html" class="nav__title  nav__title_active">о фирме</a>
-      <a href="#" class="nav__title">новости</a>
+      <a href="./about.html" class="nav__title">о фирме</a>
+      <a href="#" class="nav__title nav__title_active">новости</a>
       <a href="#" class="nav__title">аналитика</a>
       <a href="./service.html" class="nav__title">услуги</a>
       <a href="./clients.html" class="nav__title">клиенты</a>
@@ -31,7 +31,7 @@
       <h2 class="block__title">Новости фирмы</h2>
       <div class="block__description">
         <div class="block__photo-place">
-          <img class="block__photo" src="./images/Софийский.png" alt="Софийский">
+          <img class="block__photo" src="./images/Sofiysky.png" alt="Софийский">
         </div>
         <p class="block__text">
           После проведения Due Diligence юристы фирмы обеспечили приобретение её клиентом производственного земельного участка в Промышленном парке "Софийский". <br> <br>
@@ -40,7 +40,7 @@
       </div>
       <div class="block__description">
         <div class="block__photo-place">
-          <img class="block__photo" src="./images/Узбекистан герб.png" alt="Узбекистан">
+          <img class="block__photo" src="./images/Uz-emblem.png" alt="Узбекистан">
         </div>
         <p class="block__text">
           Фирма обеспечила выход её клиента на рынок IT-услуг Республики Узбекистан.</p>
